--- a/index.html
+++ b/index.html
@@ -3,15 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self'">
   <title>Your Electron App</title>
 </head>
 <body>
   <h1>Hello Electron!</h1>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=H5UXfJr_dpk&list=PLn0JNilKuL9jB981TDwh_drAVT2ytso9i&index=2" frameborder="0" allowfullscreen></iframe>
+  <div id="player"></div>
 
   <script src="./main.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
+  <script>
+    let player;
+
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('player', {
+        height: '315',
+        width: '560',
+        videoId: 'H5UXfJr_dpk',
+        playerVars: {
+          autoplay: 1,
+          controls: 0,
+          showinfo: 0,
+          modestbranding: 1,
+          loop: 1,
+          playlist: 'H5UXfJr_dpk',
+          fs: 1
+        },
+        events: {
+          'onReady': onPlayerReady
+        }
+      });
+    }
+
+    function onPlayerReady(event) {
+      event.target.playVideo();
+      event.target.mute(); // Optional: Mute the video
+      event.target.setPlaybackQuality('hd2160'); // Set quality to 4K
+    }
+  </script>
 </body>
 </html>
-
